css/site.css
section#mentions {
  width: 100%;
  padding: 0 0;
  color: white;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}
div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
	font-family: "Comic Sans MS";
	font-size: 2.5em;
}
/*# sourceMappingURL=site.css.map */

.overlay 
{
	position: absolute;
	top: -5px;
	right: 220px;
	width: 100%;
	height: 100%;
}

.img-overlay
{
	position: relative;
	padding-right: 100px;
	padding-top: 100px;
}

.shadow { 
   color: white; 
   font: bold 52px Helvetica, Arial, Sans-Serif;
   text-shadow: 1px 1px #fe4902, 
                2px 2px #fe4902, 
                3px 3px #fe4902;
   -webkit-transition: all 0.12s ease-out;
   -moz-transition:    all 0.12s ease-out;
   -ms-transition:     all 0.12s ease-out;
   -o-transition:      all 0.12s ease-out;
}
.shadow:hover {
   position: relative; 
   top: -3px; 
   left: -3px; 
   text-shadow: 1px 1px #fe4902, 
                2px 2px #fe4902, 
                3px 3px #fe4902, 
                4px 4px #fe4902, 
                5px 5px #fe4902, 
                6px 6px #fe4902;
}

#birdy {
  background: black !important;
}

.ad-malder{
  width: 516px;
  height: 1204px;
  position: absolute;
  top: 30px;
  left: 0;
}

.ad-dance{
  position: fixed;
  bottom: 0;
  right: 0;
}

.blink {
  animation: blink 1s steps(5, start) infinite;
  -webkit-animation: blink 1s steps(5, start) infinite;
}
@keyframes blink {
  to {
    visibility: hidden;
  }
}
@-webkit-keyframes blink {
  to {
    visibility: hidden;
  }
}

